--- a/app/views/includes/footer.html
+++ b/app/views/includes/footer.html
@@ -15,7 +15,7 @@
               </a>
             </li>
             <li class="govuk-footer__inline-list-item">
-              <a class="govuk-footer__link" href="cookies" target="_blank">
+              <a class="govuk-footer__link" href="https://www.cqc.org.uk/cookies" target="_blank">
                 Cookies<span class="govuk-visually-hidden"> (opens in new window)</span>
               </a>
             </li>
