--- a/app/views/includes/search-results-1.html
+++ b/app/views/includes/search-results-1.html
@@ -54,7 +54,7 @@
     <p class="service-type">Care home</p>
   </li>
   <li class="search-result page-1 result-dentist result-stratforduponavon">
-    <h2 class="govuk-heading-s"><a href="what-you-want-to-tell-us-about?service-name=Mydentist - Tiddington Road - Stratford&service-type=dentist">Mydentist - Tiddington Road - Stratford (mydentist)</a></h2>
+    <h2 class="govuk-heading-s"><a href="what-you-want-to-tell-us-about?service-name=Mydentist - Tiddington Road - Stratford&service-type=dentist">Mydentist - Tiddington Road - Stratford</a></h2>
     <p class="also-known-as">(also called mydentist)</p>
     <p>9 Tiddington Road<br>Stratford-upon-Avon<br>CV37 7AE</p>
     <p class="service-type">Dentist</p>
