--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -1,10 +1,13 @@
 <!-- Javascript -->
+<!--[if lte IE 8]><script src="/public/javascripts/bind.js"></script><![endif]-->
+<script src="/public/javascripts/details.polyfill.js"></script>
 <script src="/public/javascripts/jquery-1.11.3.js"></script>
 
 {% for scriptUrl in extensionConfig.scripts %}
   <script src="{{scriptUrl}}"></script>
 {% endfor %}
-
+<script src="/public/javascripts/vendor/dialog-polyfill.0.4.3.js"></script>
+<script src="/public/javascripts/modal-dialog.js"></script>
 <script src="/public/javascripts/application.js"></script>
 
 {% if useAutoStoreData %}
