--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -981,36 +981,40 @@ a.app-c-back-to-top:after {
   }
 }
 
+.modal-dialog__inner__button {
+  font-size: 18px;
+  font-size: 1.125rem;
+  font-family: Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-weight: 600;
+  line-height: 1;
+  box-sizing: border-box;
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 22px;
+  padding: 8px 10px 7px;
+  border: 2px solid transparent;
+  border-radius: 0;
+  color: #ffffff;
+  background-color: #00703c;
+  box-shadow: 0 2px 0 #002d18;
+  text-align: center;
+  vertical-align: top;
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+
 @media (min-width: 641px) {
 .modal-dialog__inner__button {
     font-size: 19px;
-    font-family: Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    width: auto;
+    margin-bottom: 0;
     font-weight: 400;
     line-height: 1.1875;
-    box-sizing: border-box;
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    margin-top: 0;
-    margin-bottom: 22px;
-    padding: 8px 10px 7px;
-    border: 2px solid transparent;
-    border-radius: 0;
-    color: #ffffff;
-    background-color: #00703c;
-    box-shadow: 0 2px 0 #002d18;
-    text-align: center;
-    vertical-align: top;
-    cursor: pointer;
-    -webkit-appearance: none;
   }
-}
-
-.modal-dialog__inner__button {
-  width: auto;
-  margin-bottom: 0;
 }
 
 .modal-dialog__inner__link {
