--- a/app/views/includes/search-filters.html
+++ b/app/views/includes/search-filters.html
@@ -3,7 +3,7 @@
 <details class="govuk-details">
   <summary class="govuk-details__summary" aria-expanded="false">
     <span class="govuk-details__summary-text">
-      Type of service
+      Filter by type of service
     </span>
   </summary>
   <div class="govuk-details__text">
