--- a/app/views/includes/search-filters-noscript.html
+++ b/app/views/includes/search-filters-noscript.html
@@ -33,6 +33,6 @@
   </div>
 </details>
 
-<p><a class="apply-link" href="#" id="select-service">Apply filter</a></p>
+<p><a class="apply-link" href="#" onClick="applyFilter()">Apply filter</a></p>
 
 </div>
