--- a/app/views/tell-us-which-charity.html
+++ b/app/views/tell-us-which-charity.html
@@ -30,6 +30,9 @@
         <div class="govuk-form-group form-group-container">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+              {% if data['service-name'] != 'the service' %}
+                <span class="govuk-caption-xl">{{ data['service-name'] }}</span>
+              {% endif %}
               <h1 class="govuk-fieldset__heading">
                 Which charity told you about this form?
               </h1>
