--- a/app/views/where-it-happened.html
+++ b/app/views/where-it-happened.html
@@ -28,6 +28,9 @@
       <form class="form" action="have-you-told-the-service" method="post">
 
         <div class="govuk-form-group">
+          {% if data['service-name'] != 'the service' %}
+            <span class="govuk-caption-xl">{{ data['service-name'] }}</span>
+          {% endif %}
           <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--xl" for="exact-location">
               Can you tell us exactly where it happened?
             </label>
