--- a/app/views/can-we-share.html
+++ b/app/views/can-we-share.html
@@ -33,6 +33,9 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+              {% if data['service-name'] != 'the service' %}
+                <span class="govuk-caption-xl">{{ data['service-name'] }}</span>
+              {% endif %}
               <h1 class="govuk-fieldset__heading">
                 Can we share your feedback with {{ data['service-name'] }}?
               </h1>
