--- a/app/views/did-you-hear-about-this-form-from-a-charity.html
+++ b/app/views/did-you-hear-about-this-form-from-a-charity.html
@@ -33,6 +33,9 @@
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+                {% if data['service-name'] != 'the service' %}
+                  <span class="govuk-caption-xl">{{ data['service-name'] }}</span>
+                {% endif %}
                 <h1 class="govuk-fieldset__heading">
                   Did you hear about this form through a charity?
                 </h1>
