--- a/app/views/have-you-told-the-service.html
+++ b/app/views/have-you-told-the-service.html
@@ -34,6 +34,9 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="have-you-told-the-service-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+              {% if data['service-name'] != 'the service' %}
+                <span class="govuk-caption-xl">{{ data['service-name'] }}</span>
+              {% endif %}
               <h1 class="govuk-fieldset__heading">
                 Have you told {{ data['service-name'] }} about this?
               </h1>
