--- a/app/views/how-we-handle-information.html
+++ b/app/views/how-we-handle-information.html
@@ -31,6 +31,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      {% if data['service-name'] != 'the service' %}
+        <span class="govuk-caption-xl">{{ data['service-name'] }}</span>
+      {% endif %}
       <h1 class="govuk-heading-xl">
         How we handle information
       </h1>
