--- a/app/views/your-contact-details.html
+++ b/app/views/your-contact-details.html
@@ -24,6 +24,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
+      {% if data['service-name'] != 'the service' %}
+        <span class="govuk-caption-xl">{{ data['service-name'] }}</span>
+      {% endif %}
       <h1 class="govuk-heading-xl">Your contact details</h1>
 
       <form id="contact-details-form" class="form" action="did-you-hear-about-this-form-from-a-charity" method="post">
