--- a/app/views/how-we-handle-information.html
+++ b/app/views/how-we-handle-information.html
@@ -190,7 +190,7 @@
           <p>We may still have to act on your concern. For example, if you tell us a service has falsified their records, we may visit them and ask to see the records. This could lead them to guess someone has contacted us.</p>
 
           <div class="app-c-contents-list-with-body__link-container">
-          	<a class="app-c-back-to-top dont-print" href="#contents">
+          	<a class="govuk-link app-c-back-to-top dont-print" href="#contents">
           		<svg class="app-c-back-to-top__icon" xmlns="http://www.w3.org/2000/svg" width="13" height="17" viewBox="0 0 13 17">
           			<path fill="currentColor" d="M6.5 0L0 6.5 1.4 8l4-4v12.7h2V4l4.3 4L13 6.4z"></path>
           		</svg>
