--- a/app/views/includes/search-filters-noscript.html
+++ b/app/views/includes/search-filters-noscript.html
@@ -8,15 +8,16 @@
   </summary>
   <div class="govuk-details__text">
     <ul class="govuk-checkboxes govuk-checkboxes--small gem-c-checkboxes__list service-checkboxes">
-      <li class="govuk-checkboxes__item">
+           <li class="govuk-checkboxes__item">
         <input type="checkbox" name="servicetype[]" id="servicetype-carehomes" value="carehomes" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-carehomes" class="govuk-label govuk-checkboxes__label">Care homes</label>
       </li>
       <li class="govuk-checkboxes__item">
         <input type="checkbox" name="servicetype[]" id="servicetype-careinhome" value="careinhome" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-careinhome" class="govuk-label govuk-checkboxes__label">Care in your home</label>
       </li>
       <li class="govuk-checkboxes__item">
-        <input type="checkbox" name="servicetype[]" id="servicetype-gps" value="gp" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="gps" class="govuk-label govuk-checkboxes__label">GP surgeries - NHS</label>
+        <input type="checkbox" name="servicetype[]" id="servicetype-communityhealth" value="communityhealth" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-communityhealth" class="govuk-label govuk-checkboxes__label">Community health</label>
       </li>
+
       <li class="govuk-checkboxes__item">
         <input type="checkbox" name="servicetype[]" id="servicetype-dentists" value="dentist" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetypes-dentists" class="govuk-label govuk-checkboxes__label">Dentists</label>
       </li>
@@ -24,15 +25,31 @@
         <input type="checkbox" name="servicetype[]" id="servicetype-independentdoctors" value="independentdoctor" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetypes-independentdoctors" class="govuk-label govuk-checkboxes__label">Doctors - independent (non-NHS)</label>
       </li>
       <li class="govuk-checkboxes__item">
-        <input type="checkbox" name="servicetype[]" id="servicetype-nhshospitals" value="nhshospital" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-nhshospitals" class="govuk-label govuk-checkboxes__label">Hospitals - NHS</label>
+        <input type="checkbox" name="servicetype[]" id="servicetype-gpoutofhours" value="gpoutofhours" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-gpoutofhours" class="govuk-label govuk-checkboxes__label">GP - out of hours</label>
       </li>
       <li class="govuk-checkboxes__item">
+        <input type="checkbox" name="servicetype[]" id="servicetype-gpsurgerynhs" value="gpsurgerynhs" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-gpsurgerynhs" class="govuk-label govuk-checkboxes__label">GP surgery - NHS </label>
+      </li>
+      <li class="govuk-checkboxes__item">
+        <input type="checkbox" name="servicetype[]" id="servicetype-hospice" value="hospice" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-hospice" class="govuk-label govuk-checkboxes__label">Hospice</label>
+      </li>
+      <li class="govuk-checkboxes__item">
+        <input type="checkbox" name="servicetype[]" id="servicetype-independenthospital" value="independenthospital" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-independenthospital" class="govuk-label govuk-checkboxes__label">Hospital - independent (non-NHS)</label>
+      </li>
+      <li class="govuk-checkboxes__item">
+        <input type="checkbox" name="servicetype[]" id="servicetype-nhshospitals" value="nhshospital" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-nhshospitals" class="govuk-label govuk-checkboxes__label">Hospital - NHS</label>
+      </li>
+
+      <li class="govuk-checkboxes__item">
         <input type="checkbox" name="servicetype[]" id="servicetype-remote" value="remote" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-remote" class="govuk-label govuk-checkboxes__label">Online or telephone advice</label>
+      </li>
+      <li class="govuk-checkboxes__item">
+        <input type="checkbox" name="servicetype[]" id="servicetype-substancemisuse" value="substancemisuse" class="govuk-checkboxes__input service-checkbox" data-controls="js-search-results-info" aria-controls="js-search-results-info"><label for="servicetype-substancemisuse" class="govuk-label govuk-checkboxes__label">Substance misuse</label>
       </li>
     </ul>
   </div>
 </details>
 
-<p><a class="apply-link" href="#" onClick="applyFilter()">Apply filter</a></p>
+<p><a class="apply-link" href="#">Apply filter</a></p>
 
 </div>
