--- a/app/views/search-results.html
+++ b/app/views/search-results.html
@@ -40,9 +40,9 @@
 </div><!--end govuk-grid-row-->
 
     <div class="govuk-grid-row">
-      <div class="govuk-grid-column-one-third javascript">
+      <div class="govuk-grid-column-one-third">
 
-{% include "includes/search-filters.html" %}
+{% include "includes/search-filters-noscript.html" %}
 
   </div>
   <div class="govuk-grid-column-two-thirds">
